k8s/app/mysql-statefulset.yaml
# statefulset to mysql
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
  labels:
    app: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-pod
          image: mysql:8.0
          imagePullPolicy: Always
          ports:
            - name: mysql-port
              containerPort: 3306
