k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http-port
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
